# tuigreet

./: Cargo.toml  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: nix.yml  pr.yml  release.yml  rust.yml
contrib/: example.config.toml
contrib/man/: tuigreet-1.scd
crates/tuigreet/: Cargo.toml  build.rs  i18n.toml
crates/tuigreet-config/: Cargo.toml
crates/tuigreet-config/src/: env.rs  lib.rs  parser.rs  schema.rs
crates/tuigreet-locales/locales/ca-ES/: tuigreet-locales.ftl
crates/tuigreet-locales/locales/de-DE/: tuigreet-locales.ftl
crates/tuigreet-locales/locales/en-US/: tuigreet-locales.ftl
crates/tuigreet-locales/locales/es-CL/: tuigreet-locales.ftl
crates/tuigreet-locales/locales/fr-FR/: tuigreet-locales.ftl
crates/tuigreet-locales/locales/it-IT/: tuigreet-locales.ftl
crates/tuigreet-locales/locales/pl-PL/: tuigreet-locales.ftl
crates/tuigreet-locales/locales/pt-BR/: tuigreet-locales.ftl
crates/tuigreet-system/: Cargo.toml
crates/tuigreet-system/src/: lib.rs
crates/tuigreet-theme/: Cargo.toml
crates/tuigreet-theme/src/: config.rs  lib.rs
crates/tuigreet-types/: Cargo.toml
crates/tuigreet/src/: event.rs  greeter.rs  ipc.rs  keyboard.rs  main.rs  power.rs  watcher.rs
crates/tuigreet/src/ui/: command.rs  (+7 more)
nix/: package.nix
src/: animation.rs  event.rs  greeter.rs  info.rs  main.rs  output.rs
src/config/: env.rs  mod.rs  parser.rs  schema.rs
src/integration/: display.rs
src/ui/: mod.rs  processing.rs  prompt.rs  tests.rs  util.rs
src/ui/bg_animation/: doom.rs  mod.rs
src/ui/common/: menu.rs
(+13 files in other folders)
