[package]
name         = "tuigreet-config"
description  = "Configuration parsing and schema for tuigreet"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
chrono             = { workspace = true }
codespan-reporting = { workspace = true }
dirs               = { workspace = true }
getopts            = { workspace = true }
serde              = { workspace = true }
toml               = { workspace = true }
tracing            = { workspace = true }
