[package]
name         = "tuigreet-system"
description  = "System output enumeration and terminal sizing for tuigreet"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
tuigreet-config = { workspace = true }
tracing         = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
