[package]
name         = "tuigreet-theme"
description  = "Theme and styling for tuigreet"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
tuigreet-config = { workspace = true }
tui             = { workspace = true }
